--- a/index.html
+++ b/index.html
@@ -32,3 +32,4 @@
 <link href="styles.46ee76f644c5e2be1dc6.css" rel="stylesheet"/></link>, <link href="styles.46ee76f644c5e2be1dc6.css" rel="stylesheet"/>, <body>
 <app-root></app-root>
 <script src="runtime.06daa30a2963fa413676.js" type="text/javascript"></script><script src="polyfills.08e63943d0dbd50a8136.js" type="text/javascript"></script><script src="main.c5b51de1749d16c58158.js" type="text/javascript"></script></body>, <app-root></app-root>, <script src="runtime.06daa30a2963fa413676.js" type="text/javascript"></script>, <script src="polyfills.08e63943d0dbd50a8136.js" type="text/javascript"></script>, <script src="main.c5b51de1749d16c58158.js" type="text/javascript"></script>
+</html>
