--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <app-root></app-root>
 <script src="runtime.06daa30a2963fa413676.js" type="text/javascript"></script><script src="polyfills.08e63943d0dbd50a8136.js" type="text/javascript"></script><script src="main.c5b51de1749d16c58158.js" type="text/javascript"></script></body>
-</html>, <head>
+</head>
 <meta charset="utf-8">
 <title>Giuseppefolio</title>
 <base href="/giuseppefolio/"> <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
