--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+[<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>Giuseppefolio</title>
@@ -9,7 +9,7 @@
 <body>
 <app-root></app-root>
 <script src="runtime.06daa30a2963fa413676.js" type="text/javascript"></script><script src="polyfills.08e63943d0dbd50a8136.js" type="text/javascript"></script><script src="main.c5b51de1749d16c58158.js" type="text/javascript"></script></body>
-</head>
+</html>, <head>
 <meta charset="utf-8">
 <title>Giuseppefolio</title>
 <base href="/giuseppefolio/"> <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -31,5 +31,4 @@
 <link href="styles.46ee76f644c5e2be1dc6.css" rel="stylesheet"/></link></meta>, <link href="peppe.ico" rel="icon" type="image/x-icon">
 <link href="styles.46ee76f644c5e2be1dc6.css" rel="stylesheet"/></link>, <link href="styles.46ee76f644c5e2be1dc6.css" rel="stylesheet"/>, <body>
 <app-root></app-root>
-<script src="runtime.06daa30a2963fa413676.js" type="text/javascript"></script><script src="polyfills.08e63943d0dbd50a8136.js" type="text/javascript"></script><script src="main.c5b51de1749d16c58158.js" type="text/javascript"></script></body>, <app-root></app-root>, <script src="runtime.06daa30a2963fa413676.js" type="text/javascript"></script>, <script src="polyfills.08e63943d0dbd50a8136.js" type="text/javascript"></script>, <script src="main.c5b51de1749d16c58158.js" type="text/javascript"></script>
-</html>
+<script src="runtime.06daa30a2963fa413676.js" type="text/javascript"></script><script src="polyfills.08e63943d0dbd50a8136.js" type="text/javascript"></script><script src="main.c5b51de1749d16c58158.js" type="text/javascript"></script></body>, <app-root></app-root>, <script src="runtime.06daa30a2963fa413676.js" type="text/javascript"></script>, <script src="polyfills.08e63943d0dbd50a8136.js" type="text/javascript"></script>, <script src="main.c5b51de1749d16c58158.js" type="text/javascript"></script>]
